--- a/src/test/resources/automation-config.properties
+++ b/src/test/resources/automation-config.properties
@@ -1,4 +1,4 @@
-browser=FF
+browser=chrome
 implicit_wait=20
 default_wait=30
-base_url=https://www.google.com
+base_url=https://opensource-demo.orangehrmlive.com/
