Re-engineering for webdriver-helper

--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,24 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>com.github.yjagdale.webdriverutil</groupId>
     <artifactId>webdriver-helper-utils</artifactId>
-    <version>1.2.3</version>
-
+    <version>1.2.2</version>
     <name>WebDriver Utilities</name>
     <url>https://github.com/yjagdale/webdriver-helper.git</url>
-    <description>This project will help to use repository without caring about webdriver</description>
+    <description>User can use webdriver with self managed mode. Just write test cases and use slandered method provided
+    for preforming ui operations. Debug mode for getting more detailed route cause analysis. </description>
+    <packaging>jar</packaging>
+
+    <properties>
+        <selenium-java>3.14.0</selenium-java>
+        <testng-version>6.14.3</testng-version>
+        <webdrivermanager-version>3.0.0</webdrivermanager-version>
+        <log4j-version>1.2.17</log4j-version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
+
     <licenses>
         <license>
             <name>MIT License</name>
@@ -26,7 +36,6 @@
             <organizationUrl>http://www.github.com/yjagdale/</organizationUrl>
         </developer>
     </developers>
-
 
     <scm>
         <connection>scm:git:git://github.com/yjagdale/webdriver-helper.git</connection>
@@ -45,7 +54,31 @@
         </repository>
     </distributionManagement>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>${testng-version}</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>${selenium-java}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>${webdrivermanager-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j-version}</version>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
@@ -120,38 +153,6 @@
             </plugin>
         </plugins>
     </build>
-    <packaging>jar</packaging>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>6.10</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-java</artifactId>
-            <version>3.14.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.5</version>
-        </dependency>
-
-        <dependency>
-            <groupId>io.github.bonigarcia</groupId>
-            <artifactId>webdrivermanager</artifactId>
-            <version>3.0.0</version>
-        </dependency>
-
-
-    </dependencies>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
 
 
 </project>
