--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,19 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.yjagdale.webdriverutil</groupId>
     <artifactId>webdriver-helper-utils</artifactId>
-    <version>1.2.3</version>
+    <version>1.2.4</version>
     <name>WebDriver Utilities</name>
     <url>https://github.com/yjagdale/webdriver-helper.git</url>
     <description>User can use webdriver with self managed mode. Just write test cases and use slandered method provided
     for preforming ui operations. Debug mode for getting more detailed route cause analysis. </description>
     <packaging>jar</packaging>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.1.1.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
 
     <properties>
         <selenium-java>3.14.0</selenium-java>
@@ -139,17 +146,6 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.sonatype.plugins</groupId>
-                <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.6.7</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <serverId>ossrh</serverId>
-                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
-                </configuration>
             </plugin>
         </plugins>
     </build>
