--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,7 +1,12 @@
-# LOG4J daily rolling log files configuration
-log4j.rootLogger=INFO, RollingAppender
-log4j.appender.RollingAppender=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.RollingAppender.File=./Logs/app.log
-log4j.appender.RollingAppender.DatePattern='.'yyyy-MM-dd-HH-mm'.log'
-log4j.appender.RollingAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.RollingAppender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+log4j.rootLogger = INFO,console, FILE
+log4j.appender.FILE=org.apache.log4j.FileAppender
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.FILE.File=./Logs/Logs.log
+log4j.appender.FILE.ImmediateFlush=true
+log4j.appender.FILE.Threshold=debug
+log4j.appender.FILE.Append=false
+log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
+log4j.appender.FILE.layout.conversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p - %m%n
+log4j.appender.console.layout.conversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p - %m%n
+log4j.appender.FILE.DatePattern='.'yyyy-MM-dd-HH-mm'.log'
