--- a/src/test/resources/webdriver-helper.conf
+++ b/src/test/resources/webdriver-helper.conf
@@ -1,5 +1,4 @@
 BROWSER_TYPE=ch
 BASE_URL=https://opensource-demo.orangehrmlive.com/
 IMPLICIT_WAIT=10
-DEBUG_MODE=true
-HUB_URL=10.67.115.143:4444/wd/hub/
+DEBUG_MODE=false
