Packaging with dependencies added

--- a/pom.xml
+++ b/pom.xml
@@ -5,23 +5,15 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.yjagdale.webdriverutil</groupId>
     <artifactId>webdriver-helper-utils</artifactId>
-    <version>${version}</version>
+    <version>1.3.1</version>
     <name>WebDriver Utilities</name>
     <url>https://github.com/yjagdale/webdriver-helper.git</url>
     <description>User can use webdriver with self managed mode. Just write test cases and use slandered method provided
-        for preforming ui operations. Debug mode for getting more detailed route cause analysis.
-    </description>
+        for preforming ui operations. Debug mode for getting more detailed route cause analysis. </description>
     <packaging>jar</packaging>
 
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.1.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
-    </parent>
-
     <properties>
-        <selenium-java>3.14.0</selenium-java>
+        <selenium-java>3.141.0</selenium-java>
         <testng-version>6.14.3</testng-version>
         <webdrivermanager-version>3.0.0</webdrivermanager-version>
         <log4j-version>1.2.17</log4j-version>
@@ -148,8 +140,17 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.6.7</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
-
-
 </project>
