--- a/src/test/resources/webdriver-helper.conf
+++ b/src/test/resources/webdriver-helper.conf
@@ -2,3 +2,4 @@ BROWSER_TYPE=ch
 BASE_URL=https://opensource-demo.orangehrmlive.com/
 IMPLICIT_WAIT=10
 DEBUG_MODE=false
+START_PAGE_CLASS=com.example.oragnehr.pages.Login
